--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,14 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
+html {
+    min-height: 100%;
+}
 a, a:hover , a:focus, a:active{
      color: inherit; 
+}
+u{
+    margin-top: 60px;
 }
 .body{
     margin: 0;
@@ -26,8 +32,8 @@ a, a:hover , a:focus, a:active{
 .landing-page{
     display: flex;
     width: 100%;
-    height: 100vh;
-    justify-content: space-between;
+    height: 70vh;
+    justify-content:space-around;
     align-items: center;
     overflow:hidden;
    
@@ -56,3 +62,178 @@ a, a:hover , a:focus, a:active{
     }
   }
 /* langing page end */
+.doted{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0;
+    padding: 0;
+}
+.doted-img{
+    height: 80px;
+    width: 80px;
+    justify-content: flex-end;
+    margin: 0;
+    padding: 0;
+}
+@media only screen and (max-width: 600px) {
+    .doted-img{
+        height:40px;
+        width: 40px;
+    }
+  }
+/* landing secssion start */
+.second{
+    display: flex;
+    width: 100%;
+    height: 70vh;
+    justify-content: left;
+    align-items: center;
+    overflow:hidden;
+}
+.right-us-secssion{
+    margin-left: 55px;
+}
+.left-us-secssion img{
+    height: 78vh;
+    width: 650px;
+}
+
+@media only screen and (max-width: 600px) {
+    .second{
+        display: flex;
+        width: 100%;
+        height: 100vh;
+        justify-content: left;
+        align-items: center;
+        overflow:hidden;
+        margin-bottom: 390px;
+    }
+    .left-us-secssion img{
+        height:260px;
+        width: 300px;
+    }
+    .right-us-secssion h4{
+        font-size: 15px;
+    }
+    .right-us-secssion h2{
+        font-weight: 560;
+        font-size: 20px;
+    }
+    .p-first{
+        font-size: 12;
+        font-weight: 500;
+    }
+    .p-sec{
+        font-size: 10;
+        font-weight: lighter;
+        color: #4a4a4a;
+    }
+    .right-us-secssion{
+        margin-left: 16px;
+    }
+
+  }
+
+.right-us-secssion h2{
+    font-weight: 560;
+}
+.p-first{
+    font-size: smaller;
+    font-weight: 500;
+}
+.p-sec{
+    font-size: smaller;
+    font-weight: lighter;
+    color: #4a4a4a;
+}
+/* landing secssion end */
+/* third section start */
+.third{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    
+}
+.card{
+    border: none;
+}
+.third img{
+    height: 70px;
+    width: 60px;
+    margin-top: 60px;
+    margin-left: 30px;
+}
+.third h5{
+    font-weight: bold;
+}
+.third p{
+    font-size: 14px;
+    font-weight: lighter;
+    color: #4a4a4a;
+}
+
+/* third section end */
+/* fourth section start */
+.forth{
+    width: 100%;
+    height: 100vh;
+}
+.top-section{
+    display: flex;
+    justify-content: space-evenly;
+}
+.top-section-2{
+    margin-top: 25px;
+}
+.top-section-2 h2{
+    font-weight: bolder;
+    margin-bottom: 20px;
+}
+.top-section-2 p{
+    font-size: small;
+    font-weight: 500;
+}
+.top-section-1 img{
+    height: 200px;
+    width: 170px;
+    margin-top: 15px;
+}
+.top-section-3 img{
+    height: 200px;
+    width: 170px;
+    margin-top: 15px;
+}
+.bottom-section-1{
+    background-color:	#65d683;
+    height: 300px;
+    width: 110px;
+  
+}
+.bottom-section-1 .text{
+    align-items: center;
+    text-align: center;
+    margin-top: 20px;
+    
+}
+.bottom-section{
+    margin: 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+.text1{
+    margin-top: 30px;
+}
+.text2{
+    margin-top: 30px;
+}
+.text3{
+    margin-top: 30px;
+}
+.bottom-section-2 img{
+    margin: 0;
+    margin-left: 150px;
+    
+
+}
+/* fourth section end */
