--- a/css/index.css
+++ b/css/index.css
@@ -149,7 +149,7 @@ u{
 /* landing secssion end */
 /* third section start */
 .third{
-    height: 100vh;
+    height: 80vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -176,38 +176,45 @@ u{
 /* third section end */
 /* fourth section start */
 .forth{
+    margin-top: 10px;
     width: 100%;
     height: 100vh;
 }
 .top-section{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: left;
+}
+.top-section-1{
+    margin-left: 40px;
 }
 .top-section-2{
-    margin-top: 25px;
+    margin-top: 40px;
+    margin-left: 30px;
 }
 .top-section-2 h2{
     font-weight: bolder;
     margin-bottom: 20px;
 }
 .top-section-2 p{
-    font-size: small;
+    font-size:medium;
     font-weight: 500;
 }
 .top-section-1 img{
     height: 200px;
-    width: 170px;
+    width: 200px;
     margin-top: 15px;
 }
 .top-section-3 img{
     height: 200px;
     width: 170px;
     margin-top: 15px;
+    margin-left: 10px;
 }
 .bottom-section-1{
     background-color:	#65d683;
     height: 300px;
     width: 110px;
+    margin-top: 40px;
   
 }
 .bottom-section-1 .text{
@@ -232,8 +239,11 @@ u{
 }
 .bottom-section-2 img{
     margin: 0;
-    margin-left: 150px;
-    
-
+    margin-left: 30px;
+}
+.bottom-section{
+    display: flex;
+    justify-content: left;
+    margin-left: 90px;
 }
 /* fourth section end */
